src/test/ui/borrowck/issue-54499-field-mutation-of-never-init.ast.stderr
error[E0594]: cannot assign to field `t.0` of immutable binding
  --> $DIR/issue-54499-field-mutation-of-never-init.rs:22:9
   |
LL |         let t: Tuple;
   |             - help: make this binding mutable: `mut t`
LL |         t.0 = S(1);
   |         ^^^^^^^^^^ cannot mutably borrow field of immutable binding

error[E0594]: cannot assign to field `t.1` of immutable binding
  --> $DIR/issue-54499-field-mutation-of-never-init.rs:25:9
   |
LL |         let t: Tuple;
   |             - help: make this binding mutable: `mut t`
...
LL |         t.1 = 2;
   |         ^^^^^^^ cannot mutably borrow field of immutable binding

error[E0594]: cannot assign to field `u.0` of immutable binding
  --> $DIR/issue-54499-field-mutation-of-never-init.rs:34:9
   |
LL |         let u: Tpair;
   |             - help: make this binding mutable: `mut u`
LL |         u.0 = S(1);
   |         ^^^^^^^^^^ cannot mutably borrow field of immutable binding

error[E0594]: cannot assign to field `u.1` of immutable binding
  --> $DIR/issue-54499-field-mutation-of-never-init.rs:37:9
   |
LL |         let u: Tpair;
   |             - help: make this binding mutable: `mut u`
...
LL |         u.1 = 2;
   |         ^^^^^^^ cannot mutably borrow field of immutable binding

error[E0594]: cannot assign to field `v.x` of immutable binding
  --> $DIR/issue-54499-field-mutation-of-never-init.rs:46:9
   |
LL |         let v: Spair;
   |             - help: make this binding mutable: `mut v`
LL |         v.x = S(1);
   |         ^^^^^^^^^^ cannot mutably borrow field of immutable binding

error[E0594]: cannot assign to field `v.y` of immutable binding
  --> $DIR/issue-54499-field-mutation-of-never-init.rs:49:9
   |
LL |         let v: Spair;
   |             - help: make this binding mutable: `mut v`
...
LL |         v.y = 2;
   |         ^^^^^^^ cannot mutably borrow field of immutable binding

error[E0381]: use of possibly uninitialized variable: `t.0`
  --> $DIR/issue-54499-field-mutation-of-never-init.rs:27:31
   |
LL |         println!("{:?} {:?}", t.0, t.1);
   |                               ^^^ use of possibly uninitialized `t.0`

error[E0381]: use of possibly uninitialized variable: `t.1`
  --> $DIR/issue-54499-field-mutation-of-never-init.rs:27:36
   |
LL |         println!("{:?} {:?}", t.0, t.1);
   |                                    ^^^ use of possibly uninitialized `t.1`

error[E0381]: use of possibly uninitialized variable: `u.0`
  --> $DIR/issue-54499-field-mutation-of-never-init.rs:39:31
   |
LL |         println!("{:?} {:?}", u.0, u.1);
   |                               ^^^ use of possibly uninitialized `u.0`

error[E0381]: use of possibly uninitialized variable: `u.1`
  --> $DIR/issue-54499-field-mutation-of-never-init.rs:39:36
   |
LL |         println!("{:?} {:?}", u.0, u.1);
   |                                    ^^^ use of possibly uninitialized `u.1`

error[E0381]: use of possibly uninitialized variable: `v.x`
  --> $DIR/issue-54499-field-mutation-of-never-init.rs:51:31
   |
LL |         println!("{:?} {:?}", v.x, v.y);
   |                               ^^^ use of possibly uninitialized `v.x`

error[E0381]: use of possibly uninitialized variable: `v.y`
  --> $DIR/issue-54499-field-mutation-of-never-init.rs:51:36
   |
LL |         println!("{:?} {:?}", v.x, v.y);
   |                                    ^^^ use of possibly uninitialized `v.y`

error: aborting due to 12 previous errors

For more information about this error, try `rustc --explain E0381`.
